Prevent navi texts being wrap.
git-svn-id: https://koholasys.springloops.com/source/zionusbsm/branches/sharedserver@21 b66679b3-fe4a-4674-a71e-25c3c480966b

--- a/htdoc/css/src/zionusbsm.css
+++ b/htdoc/css/src/zionusbsm.css
@@ -66,6 +66,7 @@ div#footer {
     position:absolute; 
     background-color: #C7E37B;
     color: #000000;
+    white-space:nowrap;
 }
 #n1 {
     top: 0px;
